--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,3 +1,5 @@
 FROM nginx
-RUN rm -rf /usr/share/nginx/html/index.html/
+RUN rm -rf /usr/share/nginx/html/index.html
+RUN rm -rf /etc/nginx/nginx.conf
 ADD static /usr/share/nginx/html/
+ADD nginx.conf /etc/nginx/nginx.conf
