--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -90,9 +90,9 @@ http {
         access_log off;
     }
 
-    #location /api/cart/ {
-    #    proxy_pass http://cart:8080/;
-    #}
+    location /api/cart/ {
+        proxy_pass http://cart:8080/;
+    }
 
     
 
