--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.9'
 networks:
   roboshop:
-    deriver: bridge
+    driver: bridge
 volumes:
  #docker volume create mongodb
   mongodb:
