--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -94,6 +94,10 @@ http {
         proxy_pass http://cart:8080/;
     }
 
+    ocation /api/shipping/ {
+        proxy_pass http://shipping:8080/;
+    }
+
     
 
     #location /nginx_status {
