--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -94,7 +94,7 @@ http {
         proxy_pass http://cart:8080/;
     }
 
-    ocation /api/shipping/ {
+    location /api/shipping/ {
         proxy_pass http://shipping:8080/;
     }
 
